# web_automation

./: LICENSE  README.md  pyproject.toml
base_code/: download_dataset.py  webautomation.py
tests/: conftest.py  test_elements.py
