[tool.poetry]
name = "web-automation"
version = "0.1.0"
description = ""
authors = ["Sambiase <marsamb@gmail.com>"]
readme = "README.md"
packages = [{include = "web_automation"}]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.7.2"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
